# audio_visualizer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
res/: compile_shaders.bat
res/shaders/: fragment.spv  vertex.spv
res/shaders_code/: fragment.glsl  vertex.glsl
src/: main.cpp  renderer.cpp  renderer.hpp
